DMC-E系列控制卡例程/VB.net/例2_连续运动/例2_连续运动/LTDMC.vb


    ' <summary>
    ' 设置高速比较参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <param name="axis">比较轴号：0-7</param>
    ' <param name="cmp_source">比较源：0-指令位置，1-反馈位置</param>
    ' <param name="cmp_logic">比较输出状态：0-低电平，1-高电平</param>
    ' <param name="time">脉冲时间，单位us,最小1us</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_hcmp_set_config Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal axis As UInt16, ByVal cmp_source As UInt16, ByVal cmp_logic As UInt16, ByVal time As Int32) As Int16
    ' <summary>
    ' 读取高速比较参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <param name="axis">比较轴号：0-7</param>
    ' <param name="cmp_source">比较源：0-指令位置，1-反馈位置</param>
    ' <param name="cmp_logic">比较输出状态：0-低电平，1-高电平</param>
    ' <param name="time">脉冲时间，单位us,最小1us</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_hcmp_get_config Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByRef axis As UInt16, ByRef cmp_source As UInt16, ByRef cmp_logic As UInt16, ByRef time As Int32) As Int16
    ' <summary>
    ' 添加高速比较位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <param name="cmp_pos">比较位置</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_hcmp_add_point Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal cmp_pos As Int32) As Int16
    ' <summary>
    ' 设置高速比较线性模式参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <param name="Increment">比较位置增量值</param>
    ' <param name="Count">比较次数</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_hcmp_set_liner Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal Increment As Int32, ByVal Count As Int32) As Int16
    ' <summary>
    ' 读取高速比较线性模式参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <param name="Increment">比较位置增量值</param>
    ' <param name="Count">比较次数</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_hcmp_get_liner Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByRef Increment As Int32, ByRef Count As Int32) As Int16
    ' <summary>
    ' 读取高速比较当前状态
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <param name="remained_points">剩余可用比较点数</param>
    ' <param name="current_point">当前比较位置</param>
    ' <param name="runned_points">已比较点数</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_hcmp_get_current_state Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByRef remained_points As Int32, ByRef current_point As Int32, ByRef runned_points As Int32) As Int16
    ' <summary>
    ' 清除高速比较位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_hcmp_clear_points Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16) As Int16
    ' <summary>
    ' 读高速比较输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_cmp_pin Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16) As Int16
    ' <summary>
    ' 写高速比较输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <param name="on_off">输出口状态：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_write_cmp_pin Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal on_off As UInt16) As Int16

    '二维高速位置比较功能
    Declare Function dmc_hcmp_2d_set_enable Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal cmp_enable As UInt16) As Int16
    Declare Function dmc_hcmp_2d_get_enable Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByRef cmp_enable As UInt16) As Int16
    Declare Function dmc_hcmp_2d_set_config Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal cmp_mode As UInt16, ByVal x_axis As UInt16, ByVal x_cmp_source As UInt16, ByVal y_axis As UInt16, ByVal y_cmp_source As UInt16, ByVal errors As Int32, ByVal cmp_logic As UInt16, ByVal time As Int32, ByVal pwm_enable As UInt16, ByVal duty As Double, ByVal freq As Int32, ByVal port_sel As UInt16, ByVal pwm_number As UInt16) As Int16
    Declare Function dmc_hcmp_2d_get_config Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByRef cmp_mode As UInt16, ByRef x_axis As UInt16, ByRef x_cmp_source As UInt16, ByRef y_axis As UInt16, ByRef y_cmp_source As UInt16, ByRef errors As Int32, ByRef cmp_logic As UInt16, ByRef time As Int32, ByRef pwm_enable As UInt16, ByRef duty As Double, ByRef freq As Int32, ByRef port_sel As UInt16, ByRef pwm_number As UInt16) As Int16
    Declare Function dmc_hcmp_2d_add_point Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal x_cmp_pos As Int32, ByVal y_cmp_pos As Int32) As Int16
    Declare Function dmc_hcmp_2d_get_current_state Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByRef remained_points As Int32, ByRef x_current_point As Int32, ByRef y_current_point As Int32, ByRef runned_points As Int32, ByRef current_state As UInt16) As Int16
    Declare Function dmc_hcmp_2d_clear_points Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16) As Int16
    Declare Function dmc_hcmp_2d_force_output Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal enable As Integer) As Int16

    '通用IO
    ' <summary>
    ' 按位读输入口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">IO口号：0-31</param>
    ' <returns>输入口状态：0-低电平，1-高电平</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_inbit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16) As Int16            '读取输入口的状态
    ' <summary>
    ' 按位写输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">IO口号：0-31</param>
    ' <param name="on_off">输出状态：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_write_outbit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16, ByVal on_off As UInt16) As Int16         '设置输出口的状态
    ' <summary>
    ' 按位读输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">IO口号：0-31</param>
    ' <returns>输出口状态：0-低电平，1-高电平</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_outbit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16) As Int16           '读取输出口的状态
    ' <summary>
    ' 按端口读输入口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="portno">端口号：0-1</param>
    ' <returns>输入口状态：bit0-bit31表示in0-in31,位值：0-低电平，1-高电平</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_inport Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal portno As UInt16) As UInt32     '读取输入端口的值
    ' <summary>
    ' 按端口读输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="portno">端口号：0</param>
    ' <returns>输出口状态：bit0-bit31表示out0-out31,位值：0-低电平，1-高电平</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_outport Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal portno As UInt16) As UInt32            '读取输出端口的值
    ' <summary>
    ' 按端口写输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="portno">端口号：0</param>
    ' <param name="outport_val">输出口状态：bit0-bit31表示out0-out31,位值：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_write_outport Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal portno As UInt16, ByVal outport_val As UInt32) As Int16       '设置输出端口的值
    '3800 5800专用 IO辅助功能函数
    ' <summary>
    ' IO翻转
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">IO口号：0-31</param>
    ' <param name="reverse_time">翻转时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>

    Declare Function dmc_reverse_outbit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16, ByVal reverse_time As Double) As Int16
    ' <summary>
    ' 设置IO计数模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">IO口号：0-31</param>
    ' <param name="mode">IO计数模式0：禁用，1：上升沿计数，2：下降沿计数</param>
    ' <param name="Filter">滤波时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_io_count_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16, ByVal mode As UInt16, ByVal Filter As Double) As Int16
    ' <summary>
    ' 读取IO计数模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">IO口号：0-31</param>
    ' <param name="mode">IO计数模式0：禁用，1：上升沿计数，2：下降沿计数</param>
    ' <param name="Filter">滤波时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_io_count_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16, ByRef mode As UInt16, ByRef Filter As Double) As Int16
    ' <summary>
    ' 设置IO计数值
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">IO口号：0-31</param>
    ' <param name="CountValue">计数值</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_io_count_value Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16, ByVal CountValue As Int32) As Int16
    ' <summary>
    ' 读取IO计数值
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="bitno">IO口号：0-31</param>
    ' <param name="CountValue">计数值</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_io_count_value Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal bitno As UInt16, ByRef CountValue As Int32) As Int16
